# eredis

./: README.md
include/: CMakeLists.txt  eredis.h
src/: CMakeLists.txt  eredis.c
test/: test-async.c  test-sync-thr.c
