
INCLUDE_DIRECTORIES( "${PROJECT_SOURCE_DIR}/include" )

FIND_PACKAGE(Threads REQUIRED)
IF(NOT (CMAKE_USE_PTHREADS_INIT OR CMAKE_HP_PTHREADS_INIT))
  MESSAGE( FATAL_ERROR "Only POSIX threads are supported by eredis" )
ENDIF(NOT (CMAKE_USE_PTHREADS_INIT OR CMAKE_HP_PTHREADS_INIT))

FIND_PACKAGE(Libev REQUIRED)
IF(NOT LIBEV_FOUND)
  MESSAGE( FATAL_ERROR "Could not find required package libev" )
ENDIF(NOT LIBEV_FOUND)

find_library(HIREDIS_LIB NAMES hiredis)
if (NOT HIREDIS_LIB)
        message(FATAL_ERROR "hiredis library not found")
endif()

IF(NOT DEFINED BUILD_SHARED_LIBS)
  OPTION( BUILD_SHARED_LIBS "Build eredis as a shared library" ON )
ENDIF(NOT DEFINED BUILD_SHARED_LIBS)

ADD_LIBRARY (eredis SHARED eredis.c)
target_link_libraries(eredis PUBLIC "hiredis" "ev")
TARGET_INCLUDE_DIRECTORIES( eredis PUBLIC
  $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
  $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/include>
  $<BUILD_INTERFACE:${LIBEV_INCLUDE_DIR}> )
MARK_AS_ADVANCED( EREDIS_INCLUDE_DIRECTORIES )
IF(CMAKE_VERSION VERSION_LESS 3.0)
  TARGET_LINK_LIBRARIES (eredis ${CMAKE_THREAD_LIBS_INIT} ${LIBEV_LIBRARY})
ELSE(CMAKE_VERSION VERSION_LESS 3.0)
  TARGET_LINK_LIBRARIES (eredis PUBLIC ${CMAKE_THREAD_LIBS_INIT} ${LIBEV_LIBRARY})
ENDIF(CMAKE_VERSION VERSION_LESS 3.0)

INSTALL (TARGETS eredis
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
  )
